--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
             <h1>🇺🇦</h1>
             <h1 class="transition ease-in duration-150 delay-150 hover:text-slate-700 ">NCS - Raising Money for Ukrainian Refugees</h1>
             <div>
-                <button onclick="bbc()" class="mx-1 rounded p-1 text-white font-semibold transition ease-in-out delay-150 bg-blue-500 hover:-translate-y-1 hover:scale-110 hover:bg-yellow-400 duration-300">
+                <button onclick="bbc()" class="rounded mx-1 p-1 text-white font-semibold transition ease-in-out delay-150 bg-blue-500 hover:-translate-y-1 hover:scale-110 hover:bg-yellow-400 duration-300">
                     BBC Ukraine
                   </button>
-                  <button onclick="NCS()" class="mx-1 rounded p-1 text-white font-semibold transition ease-in-out delay-150 bg-blue-500 hover:-translate-y-1 hover:scale-110 hover:bg-yellow-400 duration-300">
+                <button onclick="NCS()" class="rounded mx-1 p-1 text-white font-semibold transition ease-in-out delay-150 bg-blue-500 hover:-translate-y-1 hover:scale-110 hover:bg-yellow-400 duration-300">
                     NCS
                   </button>
             </div>
