--- a/index.html
+++ b/index.html
@@ -38,17 +38,11 @@
                 <img src="https://www.ft.com/__origami/service/image/v2/images/raw/https%3A%2F%2Fd1e00ek4ebabms.cloudfront.net%2Fproduction%2F699efe6c-18b0-460c-bbcb-e3874b3e9be3.jpg?dpr=2&fit=scale-down&quality=medium&source=next&width=700" class="max-w-full h-auto rounded-lg" alt="">
             </div>
 
-            <h3>Bake Sale</h3>
-            <p>Content will be added here with time, date, location. Content will be added here with time, 
-                date, location. Content will be added here with time, date, location. 
-                Content will be added here with time, date, location Content will be added 
-                here with time, date, location. Content will be added here with time, date, 
-                </p>
-                <p>Content will be added here with time, date, location. Content will be added here with time, 
-                    date, location. Content will be added here with time, date, location. 
-                    Content will be added here with time, date, location Content will be added 
-                    here with time, date, location. Content will be added here with time, date, 
-                    </p>
+            <h3>Cold Drinks / Ice-lollies</h3>
+            <p>We will be selling cold-drinks such as Coke and Sprite: it'll be very warm on the week commencing 11th July.
+              Cold Drinks will be £1. Ice-lollies will range from 50p to £1.00.
+            </p>
+            <p>The money raised will be donated to the British Red-Cross Ukrainian relief.</p>
             
             <table>
                 <thead>
